Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             color: #efe9e9;
         }
 
-        a:hover {
-            text-decoration: none;
-        }
+       
     </style>
+
+        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/d/dd/2002_BMW_M3_GTR_Stra%C3%9Fenversion_Retro_Classics_2024_IMG_9112.jpg" type="image/icon">
+
 
 </head>
 
@@ -531,6 +532,16 @@
                             href="https://www.flickr.com/photos/94169616@N03/27851803536/">FoS20162016_0624_104943AA</a>, <a
                             href="https://creativecommons.org/licenses/by-sa/2.0" title="Creative Commons Attribution-Share Alike 2.0">CC BY-SA
                             2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=49764227">Link</a>
+                            <br>
+                            By <a href="//commons.wikimedia.org/wiki/User:MrWalkr" title="User:MrWalkr">MrWalkr</a> - <span class="int-own-work"
+                                lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0"
+                                title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a
+                                href="https://commons.wikimedia.org/w/index.php?curid=153965891">Link</a>
+                                <br>
+                                By <a href="//commons.wikimedia.org/wiki/User:Alexander-93" title="User:Alexander-93">Alexander-93</a> - <span
+                                    class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0"
+                                    title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a
+                                    href="https://commons.wikimedia.org/w/index.php?curid=148475239">Link</a>
     </div>
    
     <footer>
