--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <title>BMW M3 E30</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      
+           <meta name="description" content="Learn the full history of the BMW M3 E30, its performance, specs, and all M3 generations in a simple and detailed guide.">
+           <meta name="keywords" content="BMW M3, BMW M3 E30, M3 history, BMW performance, M3 generations">
+           <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+
+
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -558,4 +566,5 @@
 </body>
 
 </html>
+
 
